[package]
name = "mzsignal"
version = "0.9.0"
edition = "2021"

keywords = [
    'mass-spectrometry',
    'signal-processing',
    'peak-picking'
]

categories = [
    "science"
]

description = "A library for mass spectrometry signal processing"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzsignal"
documentation = "https://docs.rs/mzsignal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mzsignal"

[profile.release]
lto = true

# local dependency crate
[features]
default = [
    "nalgebra",
    # "intel-mkl",
    "parallelism",
]
openblas = ["ndarray", "ndarray-linalg", "ndarray-linalg/openblas-static"]
netlib = ["ndarray", "ndarray-linalg", "ndarray-linalg/netlib"]
intel-mkl = ["ndarray", "ndarray-linalg", "ndarray-linalg/intel-mkl-static"]
parallelism = ["rayon"]

plotting = ["plotters"]

[dependencies]
log = "0.4.20"
num-traits = "0.2"
ndarray = { version = "0.15.6", optional = true }
ndarray-linalg = {version = "0.16.0", optional = true}
cfg-if = "1.0.0"
rayon = { version = "1.8.0", optional = true }
plotters = { version = "0.3.5", optional = true}
mzpeaks = { version="0.9.0" }
nalgebra = { version = "0.32.3", optional = true }
thiserror = "1.0.50"

[dev-dependencies]
rstest = "0.18.2"
pretty_env_logger = "0.5.0"

[package.metadata.docs.rs]
features = ["nalgebra", "parallelism"]
no-default-features = true

