[package]
name = "mzsignal"
version = "0.26.0"
edition = "2021"

keywords = [
    'mass-spectrometry',
    'signal-processing',
    'peak-picking'
]

categories = [
    "science"
]

description = "A library for mass spectrometry signal processing"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzsignal"
documentation = "https://docs.rs/mzsignal"

exclude = ["test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mzsignal"

[profile.release]
lto = true

# local dependency crate
[features]
default = [
    "nalgebra",
    # "intel-mkl",
    "parallelism",
    "avx"
]

openblas = ["ndarray", "ndarray-linalg", "ndarray-linalg/openblas-static"]
netlib = ["ndarray", "ndarray-linalg", "ndarray-linalg/netlib"]
intel-mkl = ["ndarray", "ndarray-linalg", "ndarray-linalg/intel-mkl-static"]
parallelism = ["rayon"]

avx = []

[dependencies]
log = ">=0.4.20,<1.0.0"
num-traits = "0.2"
ndarray = { version = ">=0.15.6,<0.16", optional = true }
ndarray-linalg = {version = "0.16.0", optional = true}
cfg-if = "1.0.0"
rayon = { version = ">=1.8.0,<2.0", optional = true }
mzpeaks = { version=">=0.22.0,<1.0.0" }
nalgebra = { version = "0.33.0", optional = true }
thiserror = ">=1.0.50"
libm = "0.2.8"

[dev-dependencies]
rstest = "0.23.0"
pretty_env_logger = "0.5.0"
test-log = "0.2.16"
criterion = { version = "0.5.1", features = [ "html_reports" ] }

[[bench]]
name = "rebin"
harness = false

[[bench]]
name = "peak_fit"
harness = false

[package.metadata.docs.rs]
features = ["nalgebra", "parallelism"]
no-default-features = true

rustdoc-args = [
    "--html-in-header",
    "doc/katex.html",
]
