[package]
name = "mzsignal"
version = "1.1.6"
edition = "2021"

keywords = [
    'mass-spectrometry',
    'signal-processing',
    'peak-picking'
]

categories = [
    "science"
]

description = "A library for mass spectrometry signal processing"
license = "Apache-2.0"
repository = "https://github.com/mobiusklein/mzsignal"
documentation = "https://docs.rs/mzsignal"

exclude = ["test/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mzsignal"

[profile.release]
lto = true

# local dependency crate
[features]
default = [
    "nalgebra",
    # "intel-mkl",
    "parallelism",
    "avx"
]

openblas = ["ndarray", "ndarray-linalg", "ndarray-linalg/openblas-static"]
netlib = ["ndarray", "ndarray-linalg", "ndarray-linalg/netlib"]
intel-mkl = ["ndarray", "ndarray-linalg", "ndarray-linalg/intel-mkl-static"]
parallelism = ["rayon"]

serde = ["dep:serde", "mzpeaks/serde"]
avx = []

[dependencies]
log = ">=0.4.20,<1.0.0"
num-traits = "0.2"
ndarray = { version = ">=0.15.6,<0.16", optional = true }
ndarray-linalg = {version = "0.16.0", optional = true}
cfg-if = "1.0.0"
rayon = { version = ">=1.8.0,<2.0", optional = true }
mzpeaks = { version=">=1.0.8,<1.1.0" }
nalgebra = { version = "0.33.0", optional = true }
thiserror = ">=2"
libm = "0.2.8"

serde = {version="1", features=["derive"], optional=true}

[dev-dependencies]
rayon = { version = ">=1.8.0,<2.0" }
rstest = "0.23.0"
pretty_env_logger = "0.5.0"
test-log = { version = "0.2.16", features = ["unstable"] }
criterion = { version = "0.5.1", features = [ "html_reports" ] }
serde = {version="1", features=["derive"] }
serde_json = "1.0.133"

[[bench]]
name = "rebin"
harness = false

[[bench]]
name = "peak_fit"
harness = false

[package.metadata.docs.rs]
features = ["nalgebra", "parallelism"]
no-default-features = true

rustdoc-args = [
    "--html-in-header",
    "doc/katex.html",
]

[patch.crates-io]
