[package]
name = "pymzsignal"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymzsignal"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.1", features=["extension-module"]}
ndarray = "0.15.6"
mzsignal = { path = "../../../mzsignal" }
mzpeaks = "0.8.0"
numpy = "0.18"