[package]
name = "pymzsignal"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymzsignal"
crate-type = ["cdylib"]

[features]

serde = ["mzsignal/serde"]

[dependencies]
pyo3 = {version = "0.21", features=["extension-module"]}
mzsignal = { path = "../../../mzsignal" }
mzpeaks = "1"
numpy = "0.21"
pythonize = { version = "0.21" }