[package]
name = "pymzsignal"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymzsignal"
crate-type = ["cdylib"]

[features]

[dependencies]
pyo3 = {version = "0.25.1", features=["extension-module"]}
mzsignal = { path = "../../../mzsignal", features = ["serde"]}
mzpeaks = "1"
numpy = "0.25"
pythonize = { version = "0.25" }