[build-system]
requires = ["maturin>=1.7.4,<2.0"]
build-backend = "maturin"

[project]
version = "1.1.9"
name = "pymzsignal"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
